# radioglobe-esp32-2025

./: README.md  RadioGlobe-NS-Encoder-Clamp v25.f3d
fusion-3d/: RadioGlobe-Bushing-Bottom v17.f3d  RadioGlobe-Bushing-Top v6.f3d  RadioGlobe-Main v150.f3d  RadioGlobe-Main v89.f3d  globe-counterweight-big.f3d
source/arduino/: secrets - kopie.h  secrets.h
source/arduino/RadioGlobe-Display/: CMakeLists.txt  Display_ST7701.cpp  Display_ST7701.h  LVGL_Driver.cpp  LVGL_Driver.h  RadioGlobe-Display.ino  SD_Card.cpp  SquareLine_Project.sll  SquareLine_Project.spj  calibration.ino  countrycodes.h  database.h  database.ino  dump.h  favorites.h  favorites.ino  filelist.txt  franks-esp-now.h  franks-esp-now.ino  lv_port_fs_template.h  lv_port_fs_template.ino  setup.ino  time-functions.ino  ui.c  ui.h  ui_CalibrationScreen.c  ui_CalibrationScreen.h  ui_CalibrationScreenAdvanced.c  ui_CalibrationScreenAdvanced.h  ui_DatabaseScreen.c  ui_DatabaseScreen.h  ui_Favorites.c  ui_Favorites.h  ui_Home.c  ui_Home.h  ui_IconStorage.h  ui_PasswordScreen.c  ui_PasswordScreen.h  ui_Power.c  ui_Power.h  (+32 more)
source/arduino/RadioGlobe-Globe/: RadioGlobe-Globe-V2.ino  RadioGlobe-Globe.ino  calibrate-encoders.ino  calibrations.h  frank-stations.h  franks-esp-now.h  franks-esp-now.ino  franks-stations.h  mp3_sound_winxpshutdown.h  mp3_sound_winxpstart.h  stickynotes.h  tasks-and-interrupts.ino  time-functions.ino  urlcheck.ino
source/squareline/: SquareLine_Project.spj
source/squareline/assets/: ui_font_font1.c  ui_font_font1.fcfg
